create 3 notification channels, free storage notifications, catch threshold exception, sqlite locked db exception, and selenium exception, rewrite print statement information

--- a/controller/movement_signal.ipynb
+++ b/controller/movement_signal.ipynb
@@ -21,6 +21,7 @@
     "import h5py\n",
     "import sys, getopt\n",
     "from global_modules import Sqlite_v2\n",
+    "import sqlite3\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -141,7 +142,17 @@
     "\n",
     "                # Store value to db\n",
     "                readings_db_values = [str(filename.replace('.jpg','')), str(high_value_count)]\n",
-    "                sqlite.insert_value(readings_db_cols, readings_db_values, readings_db_dtypes)\n",
+    "                insert_in_progress = True\n",
+    "                while insert_in_progress:\n",
+    "                    try:\n",
+    "                        sqlite.insert_value(readings_db_cols, readings_db_values, readings_db_dtypes)\n",
+    "                        insert_in_progress = False\n",
+    "                    except sqlite3.OperationalError as e:\n",
+    "                        print(f'movement_signal.py -l {label} Insertion error. Trying to reinitiate sqlite object. {e}')\n",
+    "                        del sqlite\n",
+    "                        sqlite = Sqlite_v2()\n",
+    "                        sqlite.set_table(label)\n",
+    "                        sqlite.create_connection(readings_db)        \n",
     "\n",
     "                # Create checkpoint of image average_value every x times. Store with timestamp\n",
     "                # Restart from that point.\n",
