--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -11,6 +11,7 @@
     "from datetime import datetime\n",
     "import sys, getopt\n",
     "import time\n",
+    "import psutil\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -26,6 +27,7 @@
     "            \n",
     "if __name__ == '__main__':\n",
     "    label = main(sys.argv[1:])\n",
+    "    print(f'movement_signal_alert.py -l \"{label}\" Starting movement signal alert server at {label}')\n",
     "    \n",
     "    try:\n",
     "        while True:\n",
@@ -39,14 +41,27 @@
     "            # Get last threshold\n",
     "            thresholds_list = os.listdir(thresholds_label_path)\n",
     "            if thresholds_list == []:\n",
-    "                print('Waiting for threshold data...')\n",
+    "                print(f'movement_signal_alert.py -l \"{label}\" Waiting for threshold data...')\n",
     "                time.sleep(10)\n",
     "                continue\n",
     "            thl_float = [float(i.replace('.cache','')) for i in thresholds_list]\n",
     "            thl_float.sort(reverse=True) # Descending, newest value first\n",
-    "            threshold_path = os.path.join(thresholds_label_path, f'{thl_float[0]}.cache')\n",
-    "            with open(threshold_path, 'r') as f:\n",
-    "                threshold = float(f.read())\n",
+    "            threshold_still_reading = True\n",
+    "            while threshold_still_reading:\n",
+    "                for threshold_fn in thl_float:\n",
+    "                    try:\n",
+    "                        threshold_path = os.path.join(thresholds_label_path, f'{threshold_fn}.cache')\n",
+    "                        with open(threshold_path, 'r') as f:\n",
+    "                            threshold = float(f.read())\n",
+    "                            threshold_still_reading = False\n",
+    "                            break\n",
+    "                    except ValueError:\n",
+    "                        print(f'movement_signal_alert.py -l \"{label}\" Threshold reading failed. Trying another threshold cache. Last path: {threshold_path}')\n",
+    "                        time.sleep(0.1)\n",
+    "                if threshold_still_reading:\n",
+    "                    print(f'movement_signal_alert.py -l \"{label}\" All threshold reading attempt failed. Wating for more threshold data...')\n",
+    "                    time.sleep(10)\n",
+    "                    continue\n",
     "\n",
     "            readings_path = os.path.join(movements_path, 'readings')\n",
     "            readings_label_path = os.path.join(readings_path, label)\n",
@@ -71,7 +86,7 @@
     "                    with open(reading_path, 'r') as f:\n",
     "                        reading = int(f.read())\n",
     "                except ValueError:\n",
-    "                    print(\"Value error. Assume 0 reading value.\")\n",
+    "                    print(f\"movement_signal_alert.py -l \"{label}\" Value error. Assume 0 reading value.\")\n",
     "                    reading = 0\n",
     "                    with open(reading_path, 'w') as f:\n",
     "                        f.write(str(0))\n",
@@ -80,7 +95,8 @@
     "                    notifications_path = os.path.join(notifications_label_path, reading_fn)\n",
     "                    data_time = datetime.fromtimestamp(float(reading_fn.replace('.cache','')))\n",
     "                    data_time = data_time.strftime('%H:%M:%S')\n",
-    "                    content = f'''{data_time} {label} val:{reading} threshold:{int(threshold)}'''\n",
+    "                    storage = psutil.disk_usage(root_path)\n",
+    "                    content = f'''{data_time} {label} val:{reading} threshold:{int(threshold)} free_storage:{int(storage.free / (2**30))}'''\n",
     "                    print(content)\n",
     "                    with open(notifications_path, 'w') as f:\n",
     "                        f.write(content)\n",
@@ -89,7 +105,7 @@
     "                try:\n",
     "                    os.remove(reading_path)\n",
     "                except PermissionError:\n",
-    "                    print(f'Failed to remove {reading_path}')\n",
+    "                    print(f'movement_signal_alert.py -l \"{label}\" Failed to remove {reading_path}')\n",
     "                    pass\n",
     "                \n",
     "            time.sleep(0.5)\n",
