--- a/controller/notifications.ipynb
+++ b/controller/notifications.ipynb
@@ -14,12 +14,27 @@
     "from global_modules import GlobalOperations, Sqlite_v2\n",
     "from html import escape\n",
     "import shutil\n",
+    "import sys, getopt\n",
+    "\n",
+    "def main(argv):\n",
+    "    opts, args = getopt.getopt(argv, \"hl:\")\n",
+    "    for opt, arg in opts:\n",
+    "        if opt == '-h':\n",
+    "            print('-l <label>')\n",
+    "            sys.exit()\n",
+    "        elif opt in ('-l'):\n",
+    "            return arg\n",
+    "        else:\n",
+    "            print('Please specify label parameter first at {label}')\n",
+    "            sys.exit()\n",
     "            \n",
     "if __name__ == '__main__':   \n",
+    "    label = main(sys.argv[1:])\n",
+    "    print(f'notifications.py -l \"{label}\" Starting notifications server.')\n",
     "    try:\n",
     "        while True:\n",
     "            TOKEN = '2002016705:AAGcXBOdx_OAj5LSVxu1LAjVO_xIih8bdfA'\n",
-    "            # Ito, chita, ibu\n",
+    "            # Chita, ito, ibu\n",
     "            CHAT_IDS = ['1217210026','1293826547','5580614403']\n",
     "            # CHAT_IDS = ['@jonathanraditya']\n",
     "\n",
@@ -28,7 +43,7 @@
     "            cache_path = os.path.join(root_path, 'cache')\n",
     "            notifications_path = os.path.join(cache_path, 'notifications')\n",
     "            os.makedirs(notifications_path, exist_ok=True)\n",
-    "            notifications_label_list = os.listdir(notifications_path)\n",
+    "            # notifications_label_list = os.listdir(notifications_path)\n",
     "\n",
     "            captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "            \n",
@@ -46,84 +61,84 @@
     "            proof_path = os.path.join(cache_path, 'proof')\n",
     "            os.makedirs(proof_path, exist_ok=True)\n",
     "\n",
-    "            for notification_label in notifications_label_list:\n",
-    "                notifications_label_path = os.path.join(notifications_path, notification_label)\n",
-    "                os.makedirs(notifications_label_path, exist_ok=True)\n",
+    "            # for notification_label in notifications_label_list:\n",
+    "            notifications_label_path = os.path.join(notifications_path, label)\n",
+    "            os.makedirs(notifications_label_path, exist_ok=True)\n",
     "\n",
-    "                notifications_list = os.listdir(notifications_label_path)\n",
-    "                nl_float = [float(i.replace('.cache','')) for i in notifications_list]\n",
-    "                nl_float.sort(reverse=False) # Ascending order, oldest first'\n",
-    "                notifications_list_ff = [str(i) + '.cache' for i in nl_float]\n",
+    "            notifications_list = os.listdir(notifications_label_path)\n",
+    "            nl_float = [float(i.replace('.cache','')) for i in notifications_list]\n",
+    "            nl_float.sort(reverse=False) # Ascending order, oldest first'\n",
+    "            notifications_list_ff = [str(i) + '.cache' for i in nl_float]\n",
     "\n",
-    "                for notification_fn in notifications_list_ff:\n",
-    "                    go = GlobalOperations()\n",
-    "                    sha256 = go.gethash(str(random.random()))\n",
+    "            for notification_fn in notifications_list_ff:\n",
+    "                go = GlobalOperations()\n",
+    "                sha256 = go.gethash(str(random.random()))\n",
     "\n",
-    "                    notification_path = os.path.join(notifications_label_path, notification_fn)\n",
-    "                    with open(notification_path, 'r') as f:\n",
-    "                        caption = f.read()\n",
+    "                notification_path = os.path.join(notifications_label_path, notification_fn)\n",
+    "                with open(notification_path, 'r') as f:\n",
+    "                    caption = f.read()\n",
     "\n",
-    "                    captured_frames_label_path = os.path.join(captured_frames_path, notification_label)\n",
-    "                    captured_frames_img_path = os.path.join(captured_frames_label_path, notification_fn.replace('.cache','.jpg'))\n",
-    "                    captured_frames_img_path_cache = os.path.join(root_path, f'a{sha256}.jpg')\n",
+    "                captured_frames_label_path = os.path.join(captured_frames_path, notification_label)\n",
+    "                captured_frames_img_path = os.path.join(captured_frames_label_path, notification_fn.replace('.cache','.jpg'))\n",
+    "                captured_frames_img_path_cache = os.path.join(root_path, f'a{sha256}.jpg')\n",
     "\n",
-    "                    try:\n",
-    "                        shutil.copy(captured_frames_img_path, captured_frames_img_path_cache)\n",
-    "                    except FileNotFoundError:\n",
-    "                        shutil.copy(os.path.join(root_path, 'image_not_found.jpg'), captured_frames_img_path_cache)\n",
-    "                    captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
-    "                    files = {'photo': captured_frames_img}\n",
+    "                try:\n",
+    "                    shutil.copy(captured_frames_img_path, captured_frames_img_path_cache)\n",
+    "                except FileNotFoundError:\n",
+    "                    shutil.copy(os.path.join(root_path, 'image_not_found.jpg'), captured_frames_img_path_cache)\n",
+    "                captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
+    "                files = {'photo': captured_frames_img}\n",
     "\n",
-    "                    caption = escape(f'{caption} id:{sha256[:3]}-{sha256[-3:]}')\n",
-    "                    print(caption)\n",
+    "                caption = escape(f'{caption} id:{sha256[:3]}-{sha256[-3:]}')\n",
+    "                print(caption)\n",
     "\n",
-    "                    # Send Messages\n",
-    "                    for CHAT_ID in CHAT_IDS:\n",
-    "                        sent = False\n",
-    "                        while not sent:\n",
-    "                            try:\n",
-    "                                captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
-    "                                files = {'photo': captured_frames_img}\n",
-    "                                send_message = f'https://api.telegram.org/bot{TOKEN}/sendPhoto?chat_id={CHAT_ID}&caption={caption}'\n",
-    "                                response = requests.get(send_message, files=files)\n",
-    "                                # print(response.content)\n",
-    "                                # print(f'Sent to: {CHAT_ID}')\n",
-    "                                captured_frames_img.close()\n",
-    "                                sent = True\n",
-    "                            except requests.exceptions.RequestException as e:\n",
-    "                                print(f'{e} Trying to send notification. Wait for 5 seconds.')\n",
-    "                                time.sleep(5)\n",
-    "                        \n",
-    "                    # Store to proofing server\n",
-    "                    proof_label_path = os.path.join(proof_path, notification_label)\n",
-    "                    os.makedirs(proof_label_path, exist_ok=True)\n",
-    "                    proof_path_fn =  os.path.join(proof_label_path, notification_fn)\n",
-    "                    with open(proof_path_fn, 'w') as f:\n",
-    "                        f.write(sha256)\n",
-    "                        \n",
-    "                    # Store to deception server\n",
-    "                    deception_path_fn = os.path.join(deception_path, notification_fn) \n",
-    "                    with open(deception_path_fn, 'w') as f:\n",
-    "                        f.write('0')\n",
-    "                        \n",
-    "                    # Store to db\n",
-    "                    notifications_db_values = [notification_fn.replace('.cache',''), sha256, '0', notification_label]\n",
-    "                    sqlite.insert_value(notifications_db_cols, notifications_db_values, notifications_db_dtypes)\n",
-    "                        \n",
-    "                    # Clear cache\n",
-    "                    try:\n",
-    "                        os.remove(captured_frames_img_path_cache)\n",
-    "                    except PermissionError:\n",
-    "                        print(f'Failed to remove {captured_frames_img_path_cache}')\n",
-    "                    os.remove(notification_path)\n",
-    "                    \n",
-    "            #         break\n",
-    "            #     break\n",
+    "                # Send Messages\n",
+    "                for CHAT_ID in CHAT_IDS:\n",
+    "                    sent = False\n",
+    "                    while not sent:\n",
+    "                        try:\n",
+    "                            captured_frames_img = open(captured_frames_img_path_cache, 'rb')\n",
+    "                            files = {'photo': captured_frames_img}\n",
+    "                            send_message = f'https://api.telegram.org/bot{TOKEN}/sendPhoto?chat_id={CHAT_ID}&caption={caption}'\n",
+    "                            response = requests.get(send_message, files=files)\n",
+    "                            # print(response.content)\n",
+    "                            # print(f'Sent to: {CHAT_ID}')\n",
+    "                            captured_frames_img.close()\n",
+    "                            sent = True\n",
+    "                        except requests.exceptions.RequestException as e:\n",
+    "                            print(f'notifications.py -l \"{label}\" {e} Trying to send notification. Wait for 5 seconds.')\n",
+    "                            time.sleep(5)\n",
+    "\n",
+    "                # Store to proofing server\n",
+    "                proof_label_path = os.path.join(proof_path, notification_label)\n",
+    "                os.makedirs(proof_label_path, exist_ok=True)\n",
+    "                proof_path_fn =  os.path.join(proof_label_path, notification_fn)\n",
+    "                with open(proof_path_fn, 'w') as f:\n",
+    "                    f.write(sha256)\n",
+    "\n",
+    "                # Store to deception server\n",
+    "                deception_path_fn = os.path.join(deception_path, notification_fn) \n",
+    "                with open(deception_path_fn, 'w') as f:\n",
+    "                    f.write('0')\n",
+    "\n",
+    "                # Store to db\n",
+    "                notifications_db_values = [notification_fn.replace('.cache',''), sha256, '0', notification_label]\n",
+    "                sqlite.insert_value(notifications_db_cols, notifications_db_values, notifications_db_dtypes)\n",
+    "\n",
+    "                # Clear cache\n",
+    "                try:\n",
+    "                    os.remove(captured_frames_img_path_cache)\n",
+    "                except PermissionError:\n",
+    "                    print(f'notifications.py -l \"{label}\" Failed to remove {captured_frames_img_path_cache}')\n",
+    "                os.remove(notification_path)\n",
+    "\n",
+    "        #         break\n",
+    "        #     break\n",
     "            time.sleep(0.5)\n",
     "            # break\n",
     "                        \n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping notifications server')\n",
+    "        print(f'notifications.py -l \"{label}\" Stopping notifications server')\n",
     "        pass"
    ]
   },
