--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -19,7 +19,8 @@
     "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.firefox.service import Service\n",
     "from selenium.common.exceptions import TimeoutException\n",
-    "# import selenium.common.exceptions.WebDriverException\n",
+    "from selenium.common.exceptions import ElementClickInterceptedException\n",
+    "from selenium.common.exceptions import WebDriverException\n",
     "\n",
     "capture_interval = 1 #second(s)\n",
     "live_for = 240 #second(s), server lived for\n",
@@ -89,8 +90,18 @@
     "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
     "                        print('End of capture session. Reloggin...')\n",
     "                except TimeoutException:\n",
-    "                    print(f'Request timeout. Wait for {wait_timeout}s.')\n",
+    "                    print(f'webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                    time.sleep(wait_timeout)\n",
+    "                except ElementClickInterceptedException, WebDriverException:\n",
+    "                    # WebDriverException:\n",
+    "                    # Connection to the server was reset while the page was loading\n",
+    "                    #\n",
+    "                    # ElementClickInterceptedException:\n",
+    "                    # Element <div class=\"exit\"> is not clickable at point (642,153) \n",
+    "                    #   because another element <div id=\"plugin\" \n",
+    "                    #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
+    "                    #   obscures it\n",
+    "                    print(f'webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'Stopping Hikvision capture server at {urlhost}')\n",
