--- a/controller/cleanup.ipynb
+++ b/controller/cleanup.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import os\n",
     "import time\n",
+    "from global_modules import GlobalOperations\n",
     "from datetime import datetime, timedelta\n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -17,6 +18,8 @@
     "    cache_path = os.path.join(root_path, 'cache')\n",
     "    captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "    os.makedirs(captured_frames_path, exist_ok=True)\n",
+    "    \n",
+    "    go = GlobalOperations()\n",
     "    \n",
     "    keep_records_for = 2 # day\n",
     "    date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
@@ -33,10 +36,11 @@
     "                        captured_frames_list_path = os.path.join(captured_frames_label_path, captured_frames_fn)\n",
     "                        os.remove(captured_frames_list_path)\n",
     "\n",
-    "            time.sleep(15)\n",
+    "            print(f'Finish cleanup at {go.datetime_now()}')\n",
+    "            time.sleep(60*60) # 1 hour\n",
     "\n",
     "        except KeyboardInterrupt:\n",
-    "            print(f'Stopping cleanup server')\n",
+    "            print(f'Stopping cleanup server at {go.datetime_now()}')\n",
     "            pass"
    ]
   },
