fix multiple exception catch error

--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -92,7 +92,7 @@
     "                except TimeoutException:\n",
     "                    print(f'webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                    time.sleep(wait_timeout)\n",
-    "                except ElementClickInterceptedException, WebDriverException:\n",
+    "                except (ElementClickInterceptedException, WebDriverException):\n",
     "                    # WebDriverException:\n",
     "                    # Connection to the server was reset while the page was loading\n",
     "                    #\n",
