fix syntax error

--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -86,7 +86,7 @@
     "                    with open(reading_path, 'r') as f:\n",
     "                        reading = int(f.read())\n",
     "                except ValueError:\n",
-    "                    print(f\"movement_signal_alert.py -l \"{label}\" Value error. Assume 0 reading value.\")\n",
+    "                    print(f'movement_signal_alert.py -l \"{label}\" Value error. Assume 0 reading value.')\n",
     "                    reading = 0\n",
     "                    with open(reading_path, 'w') as f:\n",
     "                        f.write(str(0))\n",
