--- a/controller/notifications.ipynb
+++ b/controller/notifications.ipynb
@@ -78,7 +78,7 @@
     "                with open(notification_path, 'r') as f:\n",
     "                    caption = f.read()\n",
     "\n",
-    "                captured_frames_label_path = os.path.join(captured_frames_path, notification_label)\n",
+    "                captured_frames_label_path = os.path.join(captured_frames_path, label)\n",
     "                captured_frames_img_path = os.path.join(captured_frames_label_path, notification_fn.replace('.cache','.jpg'))\n",
     "                captured_frames_img_path_cache = os.path.join(root_path, f'a{sha256}.jpg')\n",
     "\n",
@@ -110,7 +110,7 @@
     "                            time.sleep(5)\n",
     "\n",
     "                # Store to proofing server\n",
-    "                proof_label_path = os.path.join(proof_path, notification_label)\n",
+    "                proof_label_path = os.path.join(proof_path, label)\n",
     "                os.makedirs(proof_label_path, exist_ok=True)\n",
     "                proof_path_fn =  os.path.join(proof_label_path, notification_fn)\n",
     "                with open(proof_path_fn, 'w') as f:\n",
@@ -122,7 +122,7 @@
     "                    f.write('0')\n",
     "\n",
     "                # Store to db\n",
-    "                notifications_db_values = [notification_fn.replace('.cache',''), sha256, '0', notification_label]\n",
+    "                notifications_db_values = [notification_fn.replace('.cache',''), sha256, '0', label]\n",
     "                sqlite.insert_value(notifications_db_cols, notifications_db_values, notifications_db_dtypes)\n",
     "\n",
     "                # Clear cache\n",
